Begroeting en hamburgermenu toegevoegd.

--- a/Html/aboutme.html
+++ b/Html/aboutme.html
@@ -13,8 +13,9 @@
 <body>
     <!--header-->
     <header class="main-header">
-        <a class="prev" href="http://127.0.0.1:5500/index.html"><i class="fa-solid fa-angle-left"></i>Back</a>
+        <a class="prev" href="http://127.0.0.1:5500/Html/index.html"><i class="fa-solid fa-angle-left"></i>Back</a>
         <h1 class="h1">About Me</h1>
+        <button id="dark-mode" class="dark-mode-button" onclick="myFunction()"><i class="fa-solid fa-moon"></i></button>
     </header>
     <!--End header-->
     <main class="main-container">
