--- a/Html/form.html
+++ b/Html/form.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <button id="dark-mode" class="dark-mode-button" onclick="myFunction()"><i class="fa-solid fa-moon"></i></button>
     <!--main body-->
     <main class="main-container">
         <!--to add name , e-mail and the message-->
@@ -43,7 +44,7 @@
                 </label>
             </aside>
             <aside>
-                <a class="prev" href="http://127.0.0.1:5500/index.html"><i class="fa-solid fa-angle-left"></i>Back</a>
+                <a class="prev" href="http://127.0.0.1:5500/Html/index.html"><i class="fa-solid fa-angle-left"></i>Back</a>
             </aside>
         </form>
     </main>
