--- a/Html/home.html
+++ b/Html/home.html
@@ -15,13 +15,13 @@
     <header class="main-header">
         <img src="media/programing.jpg" alt="Not-found" class="header-img">
         <div class="content">
-            <h1><a class="prev" href="http://127.0.0.1:5500/index.html"><i class="fa-solid fa-angle-left"></i></a>Home
+            <h1><a class="prev" href="http://127.0.0.1:5500/Html/index.html"><i class="fa-solid fa-angle-left"></i></a>Home
             </h1>
             <p>Welcome to my portfolio! Here, you’ll find different sections that showcase my work, my background, and
                 the path I've taken as a web designer and programmer.
             </p>
         </div>
-        <button id="dark-mode" class="dark-mode-button" onclick="myFunction()">Dark Mode</button>
+        <button id="dark-mode" class="dark-mode-button" onclick="myFunction()"><i class="fa-solid fa-moon"></i></button>
     </header>
 
     <main class="container">
@@ -77,12 +77,6 @@
             <p>&copy; 2024 Toqa Abo Ahameh. All rights reserved.</p>
         </div>
     </footer>
-    <div id="cookie-banner" class="cookie">
-        <p>
-          This website uses cookies to ensure you get the best experience on our website.
-          <button id="accept-cookie" class="cookie-button">Accept</button>
-        </p>
-      </div>
     <script src="script.js"></script>
 </body>
 
