--- a/Html/index.html
+++ b/Html/index.html
@@ -15,7 +15,16 @@
     <!--header-->
     <header class="main-header" >
         <img src="media/toqalogo.png" alt="my photo" class="main-header__img">
-        <nav class="main-nav">
+        <!-- Hamburgermenu Button -->
+        <div class="menu-container">
+            <!-- Hamburgermenu icon -->
+            <div class="menu-icon" id="menu-icon">
+              <div class="bar"></div>
+              <div class="bar"></div>
+              <div class="bar"></div>
+            </div>
+          </div>
+        <nav id="menu" class="main-nav">
             <ul>
                 <li><a href="home.html">Home</a></li>
                 <li><a href="interview.html">Interview</a></li>
@@ -23,7 +32,9 @@
                 <li><a href="aboutme.html">About Me</a></li>
             </ul>
         </nav>
-        <button id="dark-mode" class="dark-mode-button" onclick="myFunction()">Dark Mode</button>
+        <button id="dark-mode" class="dark-mode-button" onclick="myFunction()"><i class="fa-solid fa-moon"></i></button>
+        <!-- Begroeting -->
+    <div class="greeting" id="sayhallo"></div>
     </header>
     <!--main body-->
     <main class="main-container">
