--- a/Html/index.html
+++ b/Html/index.html
@@ -35,6 +35,7 @@
         <button id="dark-mode" class="dark-mode-button" onclick="myFunction()"><i class="fa-solid fa-moon"></i></button>
         <!-- Begroeting -->
     <div class="greeting" id="sayhallo"></div>
+    <p id="demo"></p>
     </header>
     <!--main body-->
     <main class="main-container">
